[REFACTOR] setting user from string to class